Fixed alignment of text in table footer.

--- a/src/sgd/frontend/yeastgenome/static/scss/modules/_tables.scss
+++ b/src/sgd/frontend/yeastgenome/static/scss/modules/_tables.scss
@@ -39,3 +39,14 @@ ul.pagination {
 div.dataTables_paginate {
     margin-top: 7px;
 }
+
+div.dataTables_info {
+    display: inline-block;
+    position: relative;
+    top: -13px;
+}
+
+div.dataTables_length {
+    display: inline-block;
+    margin-left: 5px;
+}
